# BirdClaw

./: .gitignore  CLAUDE.md  README.md  install.sh  issues.md  main.py  pyproject.toml
assets/: ascii_art
birdclaw/: __init__.py  config.py
birdclaw/agent/: approvals.py  budget.py  context.py  loop.py  orchestrator.py  planner.py  project_notes.py  prompts.py  router.py  self_update.py  soul.py  soul_constitution.py  soul_loop.py  stage_prompts.py  subtask_executor.py  subtask_manifest.py  subtask_planner.py  subtask_verifier.py  supervisor.py  task_list.py
birdclaw/channels/: tui_channel.py  tui_socket_channel.py
birdclaw/gateway/: channel.py  events.py  gateway.py  notify.py  session_manager.py  test_socket.py  tui_socket.py
birdclaw/llm/: adapter.py  client.py  model_profile.py  pruner.py  scheduler.py  schemas.py  types.py  usage.py
birdclaw/memory/: cleanup.py  compact.py  dream.py  graph.py  history.py  ingest.py  inner_life.py  memorise.py  page_store.py  retrieval.py  self_concept.py  session_log.py  tasks.py  tool_cache.py  user_knowledge.py  workspace.py  workspace_log.py
birdclaw/skills/: cron.py  loader.py
birdclaw/skills/code-generation/: SKILL.md
birdclaw/skills/document-creation/: SKILL.md
birdclaw/skills/dreaming/: SKILL.md
birdclaw/skills/system_health/: SKILL.md
birdclaw/tools/: __init__.py  bash.py  bash_validation.py  code_index.py  condenser.py  context_vars.py  executor.py  files.py  graph_tools.py  hooks.py  line_search.py  permission.py  registry.py  sandbox.py  skills.py  task_tools.py  web.py  write_guard.py
birdclaw/tui/: app.py  cards.py  overlays.py  prefs.py  render.py
tests/: test.py
(+5 files in other folders)
